 * Document and image choosers now show the document / image's collection (Alejandro Garza, Janneke Janssen)
 * Added new "Welcome to your Wagtail site" Starter Page when using wagtail start command (Timothy Allen, Scott Cranfill)
 * Added ability to run individual tests through tox (Benjamin Bach)
 * Fix: Query objects returned from `PageQuerySet.type_q` can now be merged with `|` (Brady Moe)
 * Fix: Add `rel="noopener noreferrer"` to target blank links (Anselm Bradford)
 * Fix: Additional fields on custom document models now show on the multiple document upload view (Robert Rollins, Sergey Fedoseev)
 * Fix: Help text is partially hidden when using a combination of BooleanField and FieldPanel in page model (Dzianis Sheka)
 * Fix: Allow custom logos of any height in the admin menu (Meteor0id)


2.3 LTS (23.10.2018)
~~~~~~~~~~~~~~~~~~~~

 * Added support for Django 2.1 (Ryan Verner, Matt Westcott)
 * Improved colour contrast (Coen van der Kamp, Naomi Morduch Toubman, Naa Marteki Reed, Edd Baldry, Ben Enright)
 * Added 'scale' image filter (Oliver Wilkerson)
 * Added meta tag to prevent search engines from indexing admin pages (Karl Hobley)
 * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
 * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
 * Notification emails now include an "Auto-Submitted: auto-generated" header (Dan Braghis)
 * Image chooser panels now show alt text as title (Samir Shah)
 * Added `download_url` field to images in the API (Michael Harrison)
 * Dummy requests for preview now preserve the HTTP Authorization header (Ben Dickinson)
 * Fix: Respect next param on login (Loic Teixeira)
 * Fix: InlinePanel now handles relations that specify a related_query_name (Aram Dulyan)
 * Fix: before_delete_page / after_delete_page hooks now run within the same database transaction as the page deletion (Tomasz Knapik)